--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,12 +1,14 @@
-/* body{
-	background: burlywood;
-} */
+html, body{
+	background: hsl(34, 57%, 70%,0.8) no-repeat fixed center;
+	box-sizing: border-box;
+	font-family: 'Lato', sans-serif;
+	/*setting alpha = 0.1*/
+}
 
 
 /* body{
-	margin: 0;
-	background: burlywood;
-	padding: 0;
+
+	background: burlywood no-repeat fixed center;
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
 } */
@@ -22,17 +24,30 @@
 
 .selector-for-some-widget {
 	box-sizing: content-box;
+	max-width: 100%;
   }
 
 
 #specialContainer {
-	background-color: green;
+	background-color: #fff9e4;	
 	/* margin:10px; */
+}
+
+.body-container{
+	background-color: #feffe4;
+	max-width: 100%;
+	max-height: 100%;
+}
+
+#toggler_home{
+	background-color: white;
 }
 
 
 .mb-5 {
-	background-color: black;
+	background-color: e3f2fd;
+	/* max-width: 100%;
+	height: 250px; */
 }
 
 
@@ -57,4 +72,10 @@
 	width: 80%;
 	max-width: 500px;
 	font-family: Arial;
+}
+
+#header_unorder_list{
+	font-family: 'Lato', sans-serif;
+	color:black;
+	text-align: justify;
 }
