--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,6 +33,10 @@ html, body{
 	/* margin:10px; */
 }
 
+#contentContainer{
+	background-color: hsl(34, 57%, 70%,0.6);
+}
+
 .body-container{
 	background-color: #feffe4;
 	max-width: 100%;
@@ -49,6 +53,7 @@ html, body{
 	/* max-width: 100%;
 	height: 250px; */
 }
+
 
 
 *{
