--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,8 +33,11 @@ html, body{
 	/* margin:10px; */
 }
 
-#contentContainer{
-	background-color: hsl(34, 57%, 70%,0.6);
+#welcomeContent{
+	background: rgba(218, 214, 210, 0.6);
+	margin-top: auto;
+	margin-bottom: auto;
+	width: 100vw;
 }
 
 .body-container{
@@ -95,6 +98,11 @@ html, body{
 #sku-list-card{
 	width: 3000px;
 	height: 300px;
+}
+
+#reorder-card{
+	width: 500px;
+	height: 600px;
 }
 
 
