change access by priviledge users

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,15 +2,31 @@ html, body{
 	background: hsl(34, 57%, 70%,0.8) no-repeat fixed center;
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
-	scroll-behavior: smooth;
+	position: relative;
+	
+	/* overflow-y: scroll; */
+
+	/* scrollbar-width: normal;
+	scrollbar-color: red;
+	scroll-behavior: smooth; */
+	
+	padding:0px;
 	top: 2500;
 	left: 0;
-	behavior: 'smooth';
+}
 
-	/*setting alpha = 0.1*/
+.scrollbox{
+	overflow: auto;
+}
+
+::-webkit-scrollbar{
+	width: normal;
 }
 
 
+::-webkit-scrollbar-thumb{
+	background: #fff;
+}
 /* body{
 
 	background: burlywood no-repeat fixed center;
@@ -103,12 +119,12 @@ html, body{
 
 #sku-list-card{
 	width: 3000px;
-	height: 300px;
+	height: auto;
 }
 
 #reorder-card{
 	width: 500px;
-	height: 600px;
+	height: auto;
 }
 
 
